<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GB Weather</string>
    <string name="Hello">GB Weather</string>
    <string name="helloButton">Hello!</string>
    <string name="FirstProgram">This is my first program on Android</string>
    <string name="choose_location">Choose location</string>
    <string name="radiobutton1">St. Petersburg</string>
    <string name="radiobutton2">Vilnius</string>
    <string name="radiobutton3">Tenerife</string>
    <string name="city">St.Petersburg</string>
    <string name="cityV">Vilnius</string>
    <string name="cityT">Tenerife</string>
    <string name="temperature">Temperature(°C):</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Atmosphere pressure:</string>
    <string name="precipitation">Precipitation:</string>
    <string name="condition">Weather condition:</string>
    <string name="weatherForecast">Weather forecast for 3 days</string>
    <string name="cityTemp">+15.4°С</string>
    <string name="cityHumid">78%</string>
    <string name="cityPressure">767 mm Hg</string>
    <string name="cityPrecep">Rain</string>
    <string name="cityCond">3</string>
    <string name="cityTempV">+18°С</string>
    <string name="cityHumidV">53%</string>
    <string name="cityPressureV">749 mm Hg</string>
    <string name="cityPrecepV">Absent</string>
    <string name="cityCondV">2</string>
    <string name="cityTempT">+27.1°С</string>
    <string name="cityHumidT">58%</string>
    <string name="cityPressureT">738 mm Hg</string>
    <string name="cityPrecepT">Absent</string>
    <string name="cityCondT">1</string>
    <string name="friday">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="fdt">"Day temp: "</string>
    <string name="fnt">"Night temp: "</string>
    <string name="chgCity">"Choose city"</string>
    <string name="settings">"Settings"</string>
    <string name="choose_city">Choose City</string>
    <string name="type_city_name">Type city name</string>
    <string name="search">Search</string>
    <string name="change_city">Change city</string>
    <string name="city_name">City name</string>
    <string name="extra_options">Extra options</string>
    <string name="show_wind_speed">Show wind speed</string>
    <string name="show_sunrise_and_sunset_time">Show sunrise and sunset time</string>
    <string name="probability_of_precipitation">Probability of precipitation</string>
    <string name="allergic_hazard_level">Allergic hazard level</string>
    <string name="settingsTitle">Settings</string>
    <string name="save_settings">Save settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="degree">Degree</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celcius">Celsius</string>
    <string name="more_on_gismeteo">More on GisMeteo</string>
    <string name="wind">Wind:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="precepitaion">Precepitaion%:</string>
    <string name="uv_level">UV level:</string>
    <string name="_4_m_s_sw">4 m/s, SW</string>
    <string name="_5_35">5:35</string>
    <string name="_20_24">20:24</string>
    <string name="_22">22%</string>
    <string name="_1">1</string>
    <string name="windV">6 m/s, W</string>
    <string name="windT">5 m/s, ESE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
