<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4DDF8"
    tools:context=".ForecastFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sunNt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="8dp"
            android:text="@string/fnt"
            app:layout_constraintStart_toEndOf="@+id/satImg"
            app:layout_constraintTop_toBottomOf="@+id/sunDt" />

        <TextView
            android:id="@+id/sunDt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/fdt"
            app:layout_constraintStart_toEndOf="@+id/satImg"
            app:layout_constraintTop_toBottomOf="@+id/sunImg" />

        <TextView
            android:id="@+id/forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/weatherForecast"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="42dp"
            android:text="@string/friday"
            app:layout_constraintEnd_toEndOf="@+id/frImg"
            app:layout_constraintStart_toStartOf="@+id/frImg"
            app:layout_constraintTop_toBottomOf="@+id/forecast" />

        <TextView
            android:id="@+id/satturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="33dp"
            android:text="@string/sat"
            app:layout_constraintEnd_toEndOf="@+id/satImg"
            app:layout_constraintStart_toEndOf="@+id/friday"
            app:layout_constraintStart_toStartOf="@+id/satImg"
            app:layout_constraintTop_toBottomOf="@+id/forecast" />

        <TextView
            android:id="@+id/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="39dp"
            android:text="@string/sunday"
            app:layout_constraintEnd_toEndOf="@+id/sunImg"
            app:layout_constraintStart_toEndOf="@+id/satturday"
            app:layout_constraintStart_toStartOf="@+id/sunImg"
            app:layout_constraintTop_toBottomOf="@+id/forecast" />

        <ImageView
            android:id="@+id/frImg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/sun2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/friday"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/satImg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/rainy"
            app:layout_constraintStart_toEndOf="@+id/frImg"
            app:layout_constraintTop_toBottomOf="@+id/satturday"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/sunImg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/party_cloudy"
            app:layout_constraintStart_toEndOf="@+id/satImg"
            app:layout_constraintTop_toBottomOf="@+id/sunday"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/fridayDt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/fdt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frImg" />

        <TextView
            android:id="@+id/fridayNt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/fnt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fridayDt" />

        <TextView
            android:id="@+id/satDt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="4dp"
            android:text="@string/fdt"
            app:layout_constraintStart_toEndOf="@+id/frImg"
            app:layout_constraintTop_toBottomOf="@+id/satImg" />

        <TextView
            android:id="@+id/satNt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/fnt"
            app:layout_constraintStart_toEndOf="@+id/frImg"
            app:layout_constraintTop_toBottomOf="@+id/satDt" />

        <Button
            android:id="@+id/chgCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FAED7C"
            android:text="@string/chgCity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/settings"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="184dp"
            android:backgroundTint="#FAED7C"
            android:text="@string/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/firstdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="+24°C"
            app:layout_constraintStart_toEndOf="@+id/fridayDt"
            app:layout_constraintTop_toBottomOf="@+id/frImg" />

        <TextView
            android:id="@+id/firstnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="+13°C"
            app:layout_constraintStart_toEndOf="@+id/fridayNt"
            app:layout_constraintTop_toBottomOf="@+id/firstdt" />

        <TextView
            android:id="@+id/secdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="+25°C"
            app:layout_constraintStart_toEndOf="@+id/satDt"
            app:layout_constraintTop_toBottomOf="@+id/satImg" />

        <TextView
            android:id="@+id/secnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:text="+15°C"
            app:layout_constraintStart_toEndOf="@+id/satNt"
            app:layout_constraintTop_toBottomOf="@+id/secdt" />

        <TextView
            android:id="@+id/thirddt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="+24°C"
            app:layout_constraintStart_toEndOf="@+id/sunDt"
            app:layout_constraintTop_toBottomOf="@+id/sunImg" />

        <TextView
            android:id="@+id/thirdnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:text="+16°C"
            app:layout_constraintStart_toEndOf="@+id/sunNt"
            app:layout_constraintTop_toBottomOf="@+id/thirddt" />

        <Button
            android:id="@+id/openInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/more_on_gismeteo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="334dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>